--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -27,7 +27,7 @@ capi = []
 doc = ["gst/v1_18"]
 
 [package.metadata.capi]
-min_version = "0.8.0"
+min_version = "0.9.21"
 
 [package.metadata.capi.header]
 enabled = false
@@ -35,6 +35,7 @@ enabled = false
 [package.metadata.capi.library]
 install_subdir = "gstreamer-1.0"
 versioning = false
+import_library = false
 
 [package.metadata.capi.pkg_config]
 requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
