--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -75,7 +75,7 @@ gst1_22 = ["gst/v1_22", "gst-app/v1_22", "gst-video/v1_22", "gst-webrtc/v1_22", 
 doc = []
 
 [package.metadata.capi]
-min_version = "0.8.0"
+min_version = "0.9.21"
 
 [package.metadata.capi.header]
 enabled = false
@@ -83,6 +83,7 @@ enabled = false
 [package.metadata.capi.library]
 install_subdir = "gstreamer-1.0"
 versioning = false
+import_library = false
 
 [package.metadata.capi.pkg_config]
 requires_private = "gstreamer-rtp-1.0 >= 1.20, gstreamer-webrtc-1.0 >= 1.20, gstreamer-1.0 >= 1.20, gstreamer-app-1.0 >= 1.20, gstreamer-video-1.0 >= 1.20, gstreamer-sdp-1.0 >= 1.20, gobject-2.0, glib-2.0, gmodule-2.0"
