--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -52,7 +52,7 @@ capi = []
 doc = ["gst/v1_18"]
 
 [package.metadata.capi]
-min_version = "0.7.0"
+min_version = "0.9.21"
 
 [package.metadata.capi.header]
 enabled = false
@@ -60,6 +60,7 @@ enabled = false
 [package.metadata.capi.library]
 install_subdir = "gstreamer-1.0"
 versioning = false
+import_library = false
 
 [package.metadata.capi.pkg_config]
 requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gtk4, gobject-2.0, glib-2.0, gmodule-2.0"
