--- a/deny.toml
+++ b/deny.toml
@@ -174,6 +174,12 @@ version = "0.3"
 name = "regex-automata"
 version = "0.1"
 
+# old livekit-api depends on an old version of tokio-tungstenite/tungstenite
+# https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1293
+[[bans.skip]]
+name = "tungstenite"
+version = "0.19"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
