Update versions to 0.11.0

--- a/net/raptorq/Cargo.toml
+++ b/net/raptorq/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-raptorq"
-version = "0.11.0-alpha.1"
+version = "0.11.0"
 authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 description = "GStreamer RaptorQ FEC Plugin"
