--- a/audio/spotify/Cargo.toml
+++ b/audio/spotify/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-spotify"
-version = "0.11.0-alpha.1"
+version = "0.11.0"
 authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
