--- a/video/webp/Cargo.toml
+++ b/video/webp/Cargo.toml
@@ -13,10 +13,14 @@ libwebp-sys2 = { version = "0.1.2", features = ["demux", "0_5"] }
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.21"
+version = "0.21"
 package="gstreamer"
 
 [dependencies.gst-video]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.21"
+version = "0.21"
 package="gstreamer-video"
 
 [dev-dependencies]
@@ -24,6 +28,8 @@ pretty_assertions = "1"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.21"
+version = "0.21"
 package="gstreamer-check"
 
 [lib]
