--- a/mux/mp4/Cargo.toml
+++ b/mux/mp4/Cargo.toml
@@ -26,7 +26,7 @@ tempfile = "3"
 url = "2"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.7" }
 
 [features]
 default = []
