--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -18,7 +18,7 @@ chrono = { version = "0.4", default-features = false }
 gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.21", version = "0.21", features = ["v1_20"] }
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [lib]
 name = "gstrsrtp"
