--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -29,7 +29,7 @@ async-tungstenite = { version = "0.23", features = ["tokio-runtime", "tokio-nati
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 fastrand = "2.0"
-gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
+gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol", version = "0.11" }
 human_bytes = "0.4"
 url = "2"
 
