meson: Allow usage of externally overridden pkg-config
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1331>

--- a/meson.build
+++ b/meson.build
@@ -372,7 +372,7 @@ if get_option('doc').disabled()
 endif
 
 # 'pkgconfig' is the entry in the machine file, if specified
-pkg_config = find_program('pkgconfig', required: false)
+pkg_config = find_program('pkgconfig', 'pkg-config', required: false)
 if pkg_config.found()
   extra_env += {'PKG_CONFIG': pkg_config.full_path()}
 endif
