meson: Disable plugins and related outputs if features are disabled
Previously, there was no check performed on features of plugins if these
specify GStreamer plugins. This commit adds that, and ensures that the
plugins and pkg-config targets are skipped if no outputs are to be
generated (this is already done for examples).

Closes #369

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1327>

--- a/meson.build
+++ b/meson.build
@@ -339,7 +339,7 @@ foreach plugin_name, details: plugins
     plugin_features = details.get('features', [])
     if plugin_deps_found
       # Validate gst-plugin features
-      foreach feature: features
+      foreach feature: plugin_features
         if feature.startswith('gst-plugin') and not packages.contains(feature)
           plugin_deps_found = false
           break
