meson: Tell cargo to prefer static libraries
This fixes most, but not all, of the build errors in Windows when using
static libraries.

The ones remaining are:

- redirection of gstreamer-1.0 towards gstreamer-full-1.0
- Cairo not exporting the C++ stdlib requirement when built statically

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1327>

--- a/meson.build
+++ b/meson.build
@@ -320,6 +320,15 @@ if get_option('rav1e').allowed() and find_program('nasm', required: false).found
   features += 'gst-plugin-rav1e/asm'
 endif
 
+if get_option('default_library') == 'static'
+  extra_env += {
+    # Tell the pkg-config crate to think of all libraries as static
+    'PKG_CONFIG_ALL_STATIC': '1',
+    # Tell the system-deps crate to process linker flag for static deps
+    'SYSTEM_DEPS_LINK': 'static'
+  }
+endif
+
 foreach plugin_name, details: plugins
   plugin_opt = get_option(plugin_name)
   if plugin_opt.allowed()
